tests/ui/consts/const-eval/nonnull_as_ref_ub.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/nonnull_as_ref_ub.rs:4:29
   |
LL | const _: () = assert!(42 == *unsafe { NON_NULL.as_ref() });
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ memory access failed: 0x1[noalloc] is a dangling pointer (it has no provenance)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
